Update to new Jenkins version

--- a/src/main/webapp/help-globalConfig.html
+++ b/src/main/webapp/help-globalConfig.html
@@ -1,7 +1,9 @@
 <div>
-<p>This plugin from <a href="http://www.tikalk.com">Tikal
-Knowledge</a> allows sending Job Status notifications.</p>
-<pre>
+	<p>
+		This plugin from <a href="http://www.tikalk.com">Tikal Knowledge</a>
+		allows sending Job Status notifications.
+	</p>
+	<pre>
 {
     "name":"JobName",
     "url":"JobUrl",
@@ -11,4 +13,5 @@ Knowledge</a> allows sending Job Status notifications.</p>
         "status":"FAILED"
     }
 }
-</pre></div>
+</pre>
+</div>
