--- a/src/main/resources/com/tikal/hudson/plugins/notification/HudsonNotificationProperty/help-timeout.html
+++ b/src/main/resources/com/tikal/hudson/plugins/notification/HudsonNotificationProperty/help-timeout.html
@@ -1,1 +1,2 @@
-<div>Sets connection timeout (in milliseconds) for TCP and HTTP. Default timeout is 30 seconds (30,000 ms)</div>
+<div>Sets connection timeout (in milliseconds) for TCP and HTTP.
+	Default timeout is 30 seconds (30,000 ms)</div>
